{
  "version": 4,
  "terraform_version": "0.12.20",
  "serial": 17,
  "lineage": "eb20d36b-d699-4da7-de5a-623d91aea161",
  "resources": [
    {
      "module": "module.vpc",
      "mode": "managed",
      "type": "aws_internet_gateway",
      "name": "xword-vpc-internet-gateway",
      "provider": "provider.aws",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "id": "igw-00a8599484cd4a7a0",
            "owner_id": "432883629663",
            "tags": {
              "Name": "xword-vpc-internet-gateway"
            },
            "vpc_id": "vpc-07a4b791f8bdf28a9"
          },
          "dependencies": [
            "module.vpc.aws_vpc.xword-vpc"
          ]
        }
      ]
    },
    {
      "module": "module.vpc",
      "mode": "managed",
      "type": "aws_network_acl",
      "name": "xword-vpc-network-acl",
      "provider": "provider.aws",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "egress": [
              {
                "action": "allow",
                "cidr_block": "0.0.0.0/0",
                "from_port": 0,
                "icmp_code": 0,
                "icmp_type": 0,
                "ipv6_cidr_block": "",
                "protocol": "-1",
                "rule_no": 100,
                "to_port": 0
              }
            ],
            "id": "acl-072ac46f10232c6a0",
            "ingress": [
              {
                "action": "allow",
                "cidr_block": "0.0.0.0/0",
                "from_port": 0,
                "icmp_code": 0,
                "icmp_type": 0,
                "ipv6_cidr_block": "",
                "protocol": "-1",
                "rule_no": 100,
                "to_port": 0
              }
            ],
            "owner_id": "432883629663",
            "subnet_id": null,
            "subnet_ids": [
              "subnet-02b7387120c40bdf1",
              "subnet-05820e04c9ad1f336",
              "subnet-09f6d784d6eda34de",
              "subnet-0dcde0476d939f25d"
            ],
            "tags": {
              "Name": "xword-vpc-network-acl"
            },
            "vpc_id": "vpc-07a4b791f8bdf28a9"
          },
          "dependencies": [
            "module.vpc.aws_subnet.xword-app-subnet",
            "module.vpc.aws_subnet.xword-data-subnet1",
            "module.vpc.aws_subnet.xword-data-subnet2",
            "module.vpc.aws_subnet.xword-web-subnet",
            "module.vpc.aws_vpc.xword-vpc"
          ]
        }
      ]
    },
    {
      "module": "module.vpc",
      "mode": "managed",
      "type": "aws_route_table",
      "name": "xword-vpc-route-table",
      "provider": "provider.aws",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "id": "rtb-08a0f2c16c84d6ae4",
            "owner_id": "432883629663",
            "propagating_vgws": [],
            "route": [
              {
                "cidr_block": "10.0.0.0/0",
                "egress_only_gateway_id": "",
                "gateway_id": "igw-00a8599484cd4a7a0",
                "instance_id": "",
                "ipv6_cidr_block": "",
                "nat_gateway_id": "",
                "network_interface_id": "",
                "transit_gateway_id": "",
                "vpc_peering_connection_id": ""
              }
            ],
            "tags": {
              "Name": "xword-vpc-route-table"
            },
            "vpc_id": "vpc-07a4b791f8bdf28a9"
          },
          "dependencies": [
            "module.vpc.aws_internet_gateway.xword-vpc-internet-gateway",
            "module.vpc.aws_vpc.xword-vpc"
          ]
        }
      ]
    },
    {
      "module": "module.vpc",
      "mode": "managed",
      "type": "aws_route_table_association",
      "name": "xword-vpc-route-table-association1",
      "provider": "provider.aws",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-0cfbe3a568dd744c1",
            "route_table_id": "rtb-08a0f2c16c84d6ae4",
            "subnet_id": "subnet-09f6d784d6eda34de"
          },
          "dependencies": [
            "module.vpc.aws_internet_gateway.xword-vpc-internet-gateway",
            "module.vpc.aws_route_table.xword-vpc-route-table",
            "module.vpc.aws_subnet.xword-data-subnet1",
            "module.vpc.aws_vpc.xword-vpc"
          ]
        }
      ]
    },
    {
      "module": "module.vpc",
      "mode": "managed",
      "type": "aws_route_table_association",
      "name": "xword-vpc-route-table-association2",
      "provider": "provider.aws",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-0d63641b1eb8b8112",
            "route_table_id": "rtb-08a0f2c16c84d6ae4",
            "subnet_id": "subnet-05820e04c9ad1f336"
          },
          "dependencies": [
            "module.vpc.aws_internet_gateway.xword-vpc-internet-gateway",
            "module.vpc.aws_route_table.xword-vpc-route-table",
            "module.vpc.aws_subnet.xword-data-subnet2",
            "module.vpc.aws_vpc.xword-vpc"
          ]
        }
      ]
    },
    {
      "module": "module.vpc",
      "mode": "managed",
      "type": "aws_route_table_association",
      "name": "xword-vpc-route-table-association3",
      "provider": "provider.aws",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-0d08f8df6ceacbefa",
            "route_table_id": "rtb-08a0f2c16c84d6ae4",
            "subnet_id": "subnet-0dcde0476d939f25d"
          },
          "dependencies": [
            "module.vpc.aws_internet_gateway.xword-vpc-internet-gateway",
            "module.vpc.aws_route_table.xword-vpc-route-table",
            "module.vpc.aws_subnet.xword-app-subnet",
            "module.vpc.aws_vpc.xword-vpc"
          ]
        }
      ]
    },
    {
      "module": "module.vpc",
      "mode": "managed",
      "type": "aws_route_table_association",
      "name": "xword-vpc-route-table-association4",
      "provider": "provider.aws",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-0b5f292c18768ad1b",
            "route_table_id": "rtb-08a0f2c16c84d6ae4",
            "subnet_id": "subnet-02b7387120c40bdf1"
          },
          "dependencies": [
            "module.vpc.aws_internet_gateway.xword-vpc-internet-gateway",
            "module.vpc.aws_route_table.xword-vpc-route-table",
            "module.vpc.aws_subnet.xword-web-subnet",
            "module.vpc.aws_vpc.xword-vpc"
          ]
        }
      ]
    },
    {
      "module": "module.vpc",
      "mode": "managed",
      "type": "aws_security_group",
      "name": "xword-vpc-security-group",
      "provider": "provider.aws",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:432883629663:security-group/sg-0ed22240e3f77b6de",
            "description": "Allow HTTP, HTTPS, and SSH",
            "egress": [
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "",
                "from_port": 0,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "-1",
                "security_groups": [],
                "self": false,
                "to_port": 0
              }
            ],
            "id": "sg-0ed22240e3f77b6de",
            "ingress": [
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "",
                "from_port": 0,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [],
                "self": false,
                "to_port": 8000
              },
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "",
                "from_port": 22,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [],
                "self": false,
                "to_port": 22
              },
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "",
                "from_port": 443,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [],
                "self": false,
                "to_port": 443
              },
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "",
                "from_port": 80,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [],
                "self": false,
                "to_port": 80
              }
            ],
            "name": "xword-vpc-security-group",
            "name_prefix": null,
            "owner_id": "432883629663",
            "revoke_rules_on_delete": false,
            "tags": {
              "Name": "production-vpc-sg"
            },
            "timeouts": null,
            "vpc_id": "vpc-07a4b791f8bdf28a9"
          },
          "dependencies": [
            "module.vpc.aws_vpc.xword-vpc"
          ]
        }
      ]
    },
    {
      "module": "module.vpc",
      "mode": "managed",
      "type": "aws_subnet",
      "name": "xword-app-subnet",
      "provider": "provider.aws",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:432883629663:subnet/subnet-0dcde0476d939f25d",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "us-east-1d",
            "availability_zone_id": "use1-az4",
            "cidr_block": "10.0.3.0/24",
            "id": "subnet-0dcde0476d939f25d",
            "map_public_ip_on_launch": false,
            "owner_id": "432883629663",
            "tags": {
              "Name": "xword-app-subnet"
            },
            "vpc_id": "vpc-07a4b791f8bdf28a9"
          },
          "dependencies": [
            "module.vpc.aws_vpc.xword-vpc"
          ]
        }
      ]
    },
    {
      "module": "module.vpc",
      "mode": "managed",
      "type": "aws_subnet",
      "name": "xword-data-subnet1",
      "provider": "provider.aws",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:432883629663:subnet/subnet-09f6d784d6eda34de",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "us-east-1a",
            "availability_zone_id": "use1-az6",
            "cidr_block": "10.0.0.0/24",
            "id": "subnet-09f6d784d6eda34de",
            "map_public_ip_on_launch": false,
            "owner_id": "432883629663",
            "tags": {
              "Name": "xword-data-subnet-1"
            },
            "vpc_id": "vpc-07a4b791f8bdf28a9"
          },
          "dependencies": [
            "module.vpc.aws_vpc.xword-vpc"
          ]
        }
      ]
    },
    {
      "module": "module.vpc",
      "mode": "managed",
      "type": "aws_subnet",
      "name": "xword-data-subnet2",
      "provider": "provider.aws",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:432883629663:subnet/subnet-05820e04c9ad1f336",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "us-east-1b",
            "availability_zone_id": "use1-az1",
            "cidr_block": "10.0.1.0/24",
            "id": "subnet-05820e04c9ad1f336",
            "map_public_ip_on_launch": false,
            "owner_id": "432883629663",
            "tags": {
              "Name": "xword-data-subnet-2"
            },
            "vpc_id": "vpc-07a4b791f8bdf28a9"
          },
          "dependencies": [
            "module.vpc.aws_vpc.xword-vpc"
          ]
        }
      ]
    },
    {
      "module": "module.vpc",
      "mode": "managed",
      "type": "aws_subnet",
      "name": "xword-web-subnet",
      "provider": "provider.aws",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:432883629663:subnet/subnet-02b7387120c40bdf1",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "us-east-1c",
            "availability_zone_id": "use1-az2",
            "cidr_block": "10.0.2.0/24",
            "id": "subnet-02b7387120c40bdf1",
            "map_public_ip_on_launch": false,
            "owner_id": "432883629663",
            "tags": {
              "Name": "xword-web-subnet"
            },
            "vpc_id": "vpc-07a4b791f8bdf28a9"
          },
          "dependencies": [
            "module.vpc.aws_vpc.xword-vpc"
          ]
        }
      ]
    },
    {
      "module": "module.vpc",
      "mode": "managed",
      "type": "aws_vpc",
      "name": "xword-vpc",
      "provider": "provider.aws",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:432883629663:vpc/vpc-07a4b791f8bdf28a9",
            "assign_generated_ipv6_cidr_block": false,
            "cidr_block": "10.0.0.0/16",
            "default_network_acl_id": "acl-0c1eb7122b99cac1f",
            "default_route_table_id": "rtb-0b39d2c4e6c85b1b0",
            "default_security_group_id": "sg-03f65973dcf242034",
            "dhcp_options_id": "dopt-fabebc9c",
            "enable_classiclink": false,
            "enable_classiclink_dns_support": false,
            "enable_dns_hostnames": true,
            "enable_dns_support": true,
            "id": "vpc-07a4b791f8bdf28a9",
            "instance_tenancy": "default",
            "main_route_table_id": "rtb-0b39d2c4e6c85b1b0",
            "owner_id": "432883629663",
            "tags": {
              "Name": "xword-vpc"
            }
          }
        }
      ]
    }
  ]
}